--- a/info/templates/base.html
+++ b/info/templates/base.html
@@ -2,25 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>首页-新经资讯</title>
-    <link rel="stylesheet" type="text/css" href="../static/news/css/reset.css">
-    <link rel="stylesheet" type="text/css" href="../static/news/css/main.css">
-    <script type="text/javascript" src="../static/news/js/jquery-1.12.4.min.js"></script>
-    <script type="text/javascript" src="../static/news/js/main.js"></script>
-    <script type="text/javascript" src="../static/news/js/index.js"></script>
+    <title>{% block titleBlock %}{% endblock titleBlock %}</title>
+    {% block cssBlock %}
+    {% endblock cssBlock %}
 </head>
 <body>
+
     <div class="header_con">
         <div class="header">
             <a href="#" class="logo fl"><img src="../static/news/images/logo.png" alt="logo"></a>
-            <ul class="menu fl">
-                <li class="active" data-cid="1"><a href="javascript:;">最新</a></li>
-                <li data-cid="2"><a href="javascript:;">股市</a></li>
-                <li data-cid="3"><a href="javascript:;">债市</a></li>
-                <li data-cid="4"><a href="javascript:;">商品</a></li>
-                <li data-cid="5"><a href="javascript:;">外汇</a></li>
-                <li data-cid="6"><a href="javascript:;">公司</a></li>
-            </ul>
+            {% block navBlock %}
+            {% endblock navBlock %}
 {#        主页右上角处理#}
             {% if context.user %}
                 <div class="user_login fr">
@@ -40,13 +32,17 @@
             {% endif %}
         </div>
     </div>
-    
+
     <div class="conter_con">
+
         <ul class="list_con fl">
 {#            使用js动态的渲染服务器响应的主页新闻列表数据#}
 
         </ul>
+
         <div class="rank_con fr">
+        {% block userBlock %}
+        {% endblock userBlock %}
             <div class="rank_title">
                 <h3>点击排行</h3>
             </div>
@@ -60,17 +56,12 @@
                          <a href="{{ url_for("news.detail", num_id=news.id) }}">{{ news.title }}</a>
                      </li>
                 {% endfor %}
-
-
-{#                <li><span class="first">1</span><a href="#">势如破竹！人民币再度连闯四道关口 在岸、离岸双双升破6.42</a></li>#}
-{#                <li><span class="second">2</span><a href="#">凛冬已至，还有多少银行人在假装干银行</a></li>#}
-{#                <li><span class="third">3</span><a href="#">人民日报：部分城市楼市放松限制引关注，楼市调控不会“拉抽屉”</a></li>#}
-{#                <li><span>4</span><a href="#">势如破竹！人民币再度连闯四道关口 在岸、离岸双双升破6.42</a></li>#}
-{#                <li><span>5</span><a href="#">凛冬已至，还有多少银行人在假装干银行</a></li>#}
-{#                <li><span>6</span><a href="#">人民日报：部分城市楼市放松限制引关注，楼市调控不会“拉抽屉”</a></li>#}
             </ul>
         </div>
+    {% block contentBlock %}
+    {% endblock contentBlock %}
     </div>
+
     <div class="footer">        
         <div class="footer_links">
             <a href="">关于我们</a>
