--- a/info/templates/html/detail.html
+++ b/info/templates/html/detail.html
@@ -41,18 +41,24 @@
         </div>
         {{ context.detail_news.content | safe }}
 
-        <a href="javascript:;" class="collection block-center">收藏</a>
-        <a href="javascript:;" class="collected block-center" style="display: none">
-            <span class="out">已收藏</span><span class="over">取消收藏</span></a>
+        {% if not context.is_collected %}
+            <a href="javascript:;" class="collection block-center" data-news="{{ context.detail_news.id }}">收藏</a>
+            <a href="javascript:;" class="collected block-center" style="display: none" data-news="{{ context.detail_news.id }}" >
+                <span class="out">已收藏</span><span class="over">取消收藏</span></a>
+        {% else %}
+            <a href="javascript:;" class="collection block-center" style="display: none" data-news="{{ context.detail_news.id }}">收藏</a>
+            <a href="javascript:;" class="collected block-center" data-news="{{ context.detail_news.id }}" >
+                <span class="out">已收藏</span><span class="over">取消收藏</span></a>
+        {% endif %}
 
         {% if not context.user %}
         <div class="comment_form_logout">
             登录发表你的评论
         </div>
         {% else %}
-        <form action="" class="comment_form">
+        <form action="" class="comment_form" data-newsId={{ context.detail_news.id }}>
             <div class="person_pic">
-                <img src="../images/cat.jpg" alt="用户图标">
+                <img src="{{ context.user.avatar_url }}" alt="用户图标">
             </div>
             <textarea placeholder="请发表您的评论" class="comment_input"></textarea>
             <input type="submit" name="" value="评 论" class="comment_sub">
@@ -64,47 +70,39 @@
         </div>
 
         <div class="comment_list_con">
+        {% for comments in context.news_comments %}
             <div class="comment_list">
-                <div class="person_pic fl">
-                    <img src="../images/worm.jpg" alt="用户图标">
-                </div>
-                <div class="user_name fl">用户张山</div>
+                {% if comments.user.avatar_url %}
+                     <div class="person_pic fl">
+                        <img src="{{ comments.user.avatar_url }}" alt="用户图标">
+                     </div>
+                {% else %}
+                    <div class="person_pic fl">
+                        <img src="../../static/news/images/worm.jpg" alt="用户图标">
+                    </div>
+                {% endif %}
+                <div class="user_name fl">{{ comments.user.nick_name }}</div>
                 <div class="comment_text fl">
-                    遏制茅台酒价格过快上涨，多渠道供给，就不一定要买，租茅台酒也可以的，租售同权。开发共有产权茅台酒，让老百姓喝得起茅台酒，饮者有其酒。
+                    {{ comments.content }}
                 </div>
+                {% if comments.parent %}
                 <div class="reply_text_con fl">
-                    <div class="user_name2">用户李思</div>
+                    <div class="user_name2">{{ comments.parent.user.nick_name }}</div>
                     <div class="reply_text">
-                        遏制茅台酒价格过快上涨，多渠道供给，就不一定要买，租茅台酒也可以的，租售同权。开发共有产权茅台酒，让老百姓喝得起茅台酒，饮者有其酒。
+                        {{ comments.parent.content }}
                     </div>
                 </div>
-                <div class="comment_time fl">2017-01-01 00:00:00</div>
-                <a href="javascript:;" class="comment_up has_comment_up fr">1</a>
+                {% endif %}
+                <div class="comment_time fl">{{ comments.create_time }}</div>
+                <a href="javascript:;" class="comment_up has_comment_up fr">{{ comments.like_count }}</a>
                 <a href="javascript:;" class="comment_reply fr">回复</a>
-                <from class="reply_form fl">
+                <from class="reply_form fl" data-parentId={{ comments.id }} data-newsId={{ context.detail_news.id }} >
                     <textarea  class="reply_input"></textarea>
                     <input type="submit" name="" value="回复" class="reply_sub fr">
                     <input type="reset" name="" value="取消" class="reply_cancel fr">
                 </from>
             </div>
-
-            <div class="comment_list">
-                <div class="person_pic fl">
-                    <img src="../images/worm.jpg" alt="用户图标">
-                </div>
-                <div class="user_name fl">用户张山</div>
-                <div class="comment_text fl">
-                    遏制茅台酒价格过快上涨，多渠道供给，就不一定要买，租茅台酒也可以的，租售同权。开发共有产权茅台酒，让老百姓喝得起茅台酒，饮者有其酒。
-                </div>
-                <div class="comment_time fl">2017-01-01 00:00:00</div>
-                <a href="javascript:;" class="comment_up fr">赞</a>
-                <a href="javascript:;" class="comment_reply fr">回复</a>
-                <from class="reply_form fl">
-                    <textarea  class="reply_input"></textarea>
-                    <input type="submit" name="" value="回复" class="reply_sub fr">
-                    <input type="reset" name="" value="取消" class="reply_cancel fr">
-                </from>
-            </div>
+        {% endfor %}
         </div>
 
     </div>
