--- a/info/templates/base.html
+++ b/info/templates/base.html
@@ -22,7 +22,7 @@
                     <img src="../static/news/images/person01.png" class="lgin_pic">
                 {% endif %}
 
-                    <a href="#">{{ context.user.nick_name }}</a>
+                    <a href="{{ url_for('users.index') }}">{{ context.user.nick_name }}</a>
                     <a href="javascript:;" onclick="logout();">退出</a>
                 </div>
             {% else %}
@@ -34,6 +34,7 @@
     </div>
 
     <div class="conter_con">
+    {% block totalBlock %}
 
         <ul class="list_con fl">
 {#            使用js动态的渲染服务器响应的主页新闻列表数据#}
@@ -60,6 +61,7 @@
         </div>
     {% block contentBlock %}
     {% endblock contentBlock %}
+    {% endblock totalBlock %}
     </div>
 
     <div class="footer">        
