--- a/info/templates/html/user_base_info.html
+++ b/info/templates/html/user_base_info.html
@@ -3,9 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<title>用户中心</title>
-	<link rel="stylesheet" type="text/css" href="../css/reset.css">
-	<link rel="stylesheet" type="text/css" href="../css/main.css">
-    <script type="text/javascript" src="../js/user_base_info.js"></script>
+	<link rel="stylesheet" type="text/css" href="../../static/news/css/reset.css">
+	<link rel="stylesheet" type="text/css" href="../../static/news/css/main.css">
+    <script type="text/javascript" src="../../static/news/js/user_base_info.js"></script>
 </head>
 <body class="inframe_body">
     <form class="base_info">
